# randomness-detection

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  ablation_benchmark.py  install.sh  pyproject.toml  requirements.txt  research_benchmark.py  research_benchmark_results.json  research_score.py  research_train.py  run_real_tests.py  test_benchmark.py  test_cpu_full.py  test_ensemble.py  test_exclude.py  test_helpers.py  test_install_smoke.sh  test_install_smoke_data.py  test_oneline_install_smoke.sh  test_quality_benchmark.py  test_real_parallel.py  test_real_world_data.py  test_research_hybrid.py  test_robustness.py  validate_and_train.py  verify_cpu_usage.py
Docs/: README.md  api-reference.md  architecture.md  authentication.md  benchmark-methodology.md  cli.md  configuration.md  exclusion.md  getting-started.md  parallel-processing.md  research-lrd-hybrid.md  scoring-model.md  testing.md  tests-and-metrics-explained.md  training-and-bootstrap.md
benchmark_tools/: deflate_score.py
randomness_detection/: __init__.py  __main__.py  api_server.py  bootstrap.py  bootstrap_cli.py  bootstrap_progress.py  config.py  corpora.py  corpus_validator.py  ensemble_features.py  exclude_import.py  features.py  freq_model.py  inference_pool.py  input_parser.py  io_utils.py  parallel.py  scorer.py  segmentation.py  synthetic.py  trainer.py
randomness_detection/api/: __init__.py  app.py  auth.py  models.py  scoring.py
randomness_detection/exclude/: __init__.py  manager.py  matcher.py  normalize.py  store.py
randomness_detection/research/: __init__.py  io_utils.py  (+6 more)
